reorganised folders and added banner element

--- a/index.html
+++ b/index.html
@@ -18,26 +18,24 @@
                 <a href="#">About Me</a>
                 <a href="#">Work</a>
                 <a href="#">Contact Me</a>
-                <a href="#">Resume</a>           
+                <a href="#">Resume</a>              
             </nav>
         </header>
 
-        <section class="banner">
-            <h2 class="banner-subtitle">Text Subtitle</h2>
-            
-            <!-- <div class="banner-image">
-                <img src="./sample assets/image-1.png" alt="Sample Image">
-            </div> -->
-        </section>
+        <div class="banner">
+            <div class="banner-container">
+                <h2 class="banner-subtitle">Text Subtitle</h2>
+            </div>
+        </div>
         
         <main>
-            <!-- <div class="profile-elements">
+            <div class="profile-elements">
                 <div class="profile-section">
                     <h2 class="profile-heading">About Me</h2>
                     <div class="profile-content">
                         <p class="about-me"></p>
                     </div>
-                </div> -->
+                </div>
                 <!-- <div class="profile-section">
                     <h2>Work</h2>
                     <div class="profile-content">
@@ -52,9 +50,9 @@
 
                 </div> -->
                 <!--"alt" tags increase image accessibility for users-->
-                <!-- <img src="./sample assets/image-1.png" alt ="multi-colored squares with sample text in the center">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div> -->
+                <!-- <img src="./assets/images/image-1.png" alt ="multi-colored squares with sample text in the center">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>-->
+            </div>
         </main> 
 
         <!-- <footer>
