fixed content flex box behaviour

--- a/index.html
+++ b/index.html
@@ -37,19 +37,13 @@
                 </aside>
                 
                 <div id="aboutID" class="profile-content about-me">
-
-                    <!-- divide into p tags and add padding -->
-                    <pre class="about-me">
-                        Welcome to my portfolio website!! 
-                        
-                        My name is Zac and I'm passionate about finding solutions to problems and understanding how things work.
+                    <p>Welcome to my portfolio website!!</p>     
+                    <p>My name is Zac and I'm passionate about finding solutions to problems and understanding how things work.
                         I intially started as a games developer, programming in C# but decided to shift careers and looked into expanded my skills into other areas of software development.
                         I am currently learning HTML, CSS and JavaScript and plan to expand my skillset even further into more backend languages later down the line. Eventually aiming to
-                        become a full-stack web developer.
-
-                        This page highlights some projects I've been working on to hone my web development abilites. Along with containing links for contact or repositories I'm currently working on.
-
-                        Thanks for visiting my page!</pre>
+                        become a full-stack web developer.</p>
+                    <p>This page highlights some projects I've been working on to hone my web development abilites. Along with containing links for contact or repositories I'm currently working on.</p>
+                    <p>Thanks for visiting my page!</p>
                 </div>
 
                 <!--BANNER DIVIDER-->
@@ -65,8 +59,11 @@
                         <div class="work-primary-node">
 
                         </div>
-                        <div class="work-node">
-
+                        <div class="work-node-container ">
+                            <div class="nodes node1"></div>
+                            <div class="nodes node2"></div>
+                            <div class="nodes node3"></div>
+                            <div class="nodes node4"></div>
                         </div>
                 </div>
 
