work node styling and headings

--- a/index.html
+++ b/index.html
@@ -57,13 +57,21 @@
                 
                 <div id="workID" class="profile-content work">
                         <div class="work-primary-node">
-
+                            <h3 class="node-main-header">CSS Code Cheatsheet</h3>
                         </div>
                         <div class="work-node-container ">
-                            <div class="nodes node1"></div>
-                            <div class="nodes node2"></div>
-                            <div class="nodes node3"></div>
-                            <div class="nodes node4"></div>
+                            <div class="nodes node1">
+                                <h3 class="node-header">Website Portfolio Template</h3>
+                            </div>
+                            <div class="nodes node2">
+                                <h3 class="node-header">Horiseon Code Refactoring</h3>
+                            </div>
+                            <div class="nodes node3">
+                                <h3 class="node-header">Coming Soon</h3>
+                            </div>
+                            <div class="nodes node4">
+                                <h3 class="node-header">Coming Soon</h3>
+                            </div>
                         </div>
                 </div>
 
