added links and final UI node images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <link rel="stylesheet" href="./assets/reset.css">
         <link rel="stylesheet" href="./assets/style.css">
     </head>
 
@@ -38,9 +39,9 @@
                 
                 <div id="aboutID" class="profile-content about-me">
                     <p>Welcome to my portfolio website!!</p>     
-                    <p>My name is Zac and I'm passionate about finding solutions to problems and understanding how things work.
-                        I intially started as a games developer, programming in C# but decided to shift careers and looked into expanded my skills into other areas of software development.
-                        I am currently learning HTML, CSS and JavaScript and plan to expand my skillset even further into more backend languages later down the line. Eventually aiming to
+                    <p>My name is Zac Gilfoyle and I'm passionate about understanding how things work and finding solutions to problems.
+                        I intially started as a games developer, programming in C# but decided to shift careers and looked into expanding my skills into other areas of software development.
+                        I am currently learning HTML, CSS and JavaScript and plan to grow my skillset even further into more backend languages later down the line. Eventually aiming to
                         become a full-stack web developer.</p>
                     <p>This page highlights some projects I've been working on to hone my web development abilites. Along with containing links for contact or repositories I'm currently working on.</p>
                     <p>Thanks for visiting my page!</p>
@@ -56,23 +57,23 @@
                 </aside>
                 
                 <div id="workID" class="profile-content work">
-                        <div class="work-primary-node">
+                        <a href="https://zacgil.github.io/CSS-Snippet-Cheatsheet/" class="work-primary-node">
                             <h3 class="node-main-header">CSS Code Cheatsheet</h3>
-                        </div>
-                        <div class="work-node-container ">
-                            <div class="nodes node1">
+                        </a>
+                        <div class="work-node-container">
+                            <a href="https://github.com/ZACGIL/Personal-Portfolio-Website" class="nodes node1">
                                 <h3 class="node-header">Website Portfolio Template</h3>
-                            </div>
-                            <div class="nodes node2">
+                            </a>
+                            <a href="https://zacgil.github.io/Horiseon/" class="nodes node2">
                                 <h3 class="node-header">Horiseon Code Refactoring</h3>
-                            </div>
-                            <div class="nodes node3">
+                            </a>
+                            <a href="#workID" class="nodes node3">
                                 <h3 class="node-header">Coming Soon</h3>
-                            </div>
-                            <div class="nodes node4">
-                                <h3 class="node-header">Coming Soon</h3>
-                            </div>
-                        </div>
+                            </a>
+                            <a href="#workID" class="nodes node4">
+                                <h3 class="node-header">Coming Soon</h3>                                
+                            </a>
+                        </div>  
                 </div>
 
                 <!--BANNER DIVIDER-->
@@ -103,17 +104,4 @@
             <h4>&#169; 2024 Zac Gilfoyle Production</h4>
         </footer>
     </body>
-    <!-- GIVEN I need to sample a potential employee's previous work
-WHEN I load their portfolio
-THEN I am presented with the developer's name, a recent photo or avatar, and links to sections about them, their work, and how to contact them
-WHEN I click one of the links in the navigation
-THEN the UI scrolls to the corresponding section
-WHEN I click on the link to the section about their work
-THEN the UI scrolls to a section with titled images of the developer's applications
-WHEN I am presented with the developer's first application
-THEN that application's image should be larger in size than the others
-WHEN I click on the images of the applications
-THEN I am taken to that deployed application
-WHEN I resize the page or view the site on various screens and devices
-THEN I am presented with a responsive layout that adapts to my viewport -->
 </html>
