added accessibility for mobile devices

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
         </header>
 
         <div class="banner">
+            <!-- add profile picture here -->
             <div class="banner-container">
                 <h2 class="banner-subtitle">My name is Zac.</h2>
             </div>
         </div>
         
         <main>
-            <div class="profile-elements">           
+            <section class="profile-elements">           
                 <!--ABOUT ME-->
                 <aside class="profile-title">
                     <h2 class="profile-header">ABOUT ME</h2>      
@@ -49,6 +50,7 @@
 
                 <!--BANNER DIVIDER-->
                 <div class="profile-banner">
+                <!-- determine alt-tags for CSS-based images files -->
                 </div>
 
                 <!--WORK-->
@@ -97,7 +99,7 @@
                 <div class="profile-banner">
                 </div>
 
-            </div>
+            </section>
         </main> 
 
         <footer>
